--- a/Ap 7_13 Application/login.html
+++ b/Ap 7_13 Application/login.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- Coding by CodingLab | www.codinglabweb.com-->
     <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -18,7 +17,7 @@
         <section class="container forms">
             <div class="form login" id="login">
                 <div class="form-content">
-                    <header>MOHELA</header>
+                    <header style="color: aliceblue;">MOHELA</header>
                     <form action="../../index.html">
                         <div class="field input-field">
                             <input type="email" placeholder="Email" class="input" required>
@@ -29,8 +28,8 @@
                             <i class='bx bx-hide eye-icon'></i>
                         </div>
 
-                        <div class="form-link">
-                            <a href="#" class="forgot-pass">Forgot password?</a>
+                        <div class="form-link" >
+                            <a href="#" class="forgot-pass" style="color: aliceblue;">Forgot password?</a>
                         </div>
 
                         <div class="field button-field">
@@ -39,7 +38,7 @@
                     </form>
 
                     <div class="form-link">
-                        <span>Don't have an account? <a href="#" class="link signup-link">Signup</a></span>
+                        <span style="color: aliceblue;">Don't have an account? <a href="#" class="link signup-link" style="color: rgb(0, 47, 255);">Signup</a></span>
                     </div>
                 </div>
 
