--- a/Ap 7_13 Application/index.html
+++ b/Ap 7_13 Application/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <script src="https://kit.fontawesome.com/8602fd3c0c.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="button.js"></script>
     <script type="module" src="index.js"></script>
 </head>
 <body>
@@ -20,10 +21,10 @@
             <a href="index.html" class="logo"><img src="./imagesmain/mohela.png"></a>
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="#products">Products</a></li>
-                <li><a href="#why-choose-us">Why choose us?</a></li>
-                <li><a href="#faqs">FAQs</a></li>
-                <li><a href="#contact">Let's talk</a></li>
+                <li><a href="index.html#products">Products</a></li>
+                <li><a href="index.html#why-choose-us">Why choose us?</a></li>
+                <li><a href="index.html#faqs">FAQs</a></li>
+                <li><a href="contact.html">Let's talk</a></li>
             </ul>
             <div class="icons">
                 <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
@@ -391,7 +392,7 @@
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="#products">Products</a></li>
                     <li><a href="#why-choose-us">Why choose us?</a></li>
-                    <li><a href="#faqs">FAQs</a></li>
+                    <li><a href="faqs.html">FAQs</a></li>
                     <li><a href="#contact">Let's talk</a></li>
                 </ul>
             </div>
