--- a/Ap 7_13 Application/index.html
+++ b/Ap 7_13 Application/index.html
@@ -29,7 +29,7 @@
             <div class="icons">
                 <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
                 <a href="shopping.html"><i class="fa-solid fa-cart-shopping"></i></a>
-                <a href=""><i class="fa-solid fa-user"></i></a>
+                <a href="login.html"><i class="fa-solid fa-user"></i></a>
             </div>
             <button class="menu-btn"><i class="fa-solid fa-bars"></i></button>
             <button class="close-btn"><i class="fa-solid fa-xmark"></i></button>
