--- a/Ap 7_13 Application/shopping.html
+++ b/Ap 7_13 Application/shopping.html
@@ -14,7 +14,7 @@
     <nav class="navbar">
         <div class="navbar-center">
             <span class="nav-icon">
-                <i class="fa-solid fa-backward"></i>
+                <a href="index.html"><i class="fas fa-arrow-left"></i></a>
             </span>
             <img src="./imagesmain/mohela.png" alt="logo" style="width: auto; height: 5rem;">
             <div class="cart-btn">
